fix steps background on dark mode / fix headings anchor link color on dark mode (#3913)
* Fix dark theme `@apply` issue on pseudo-elements

* refactor

---------

--- a/packages/nextra/styles/steps.css
+++ b/packages/nextra/styles/steps.css
@@ -5,12 +5,13 @@
   h5,
   h6 {
     counter-increment: var(--counter-id);
-    /* resets from nextra-theme-docs */
+    /* Resets from nextra-theme-docs */
     @apply x:border-0 x:pb-0 x:font-semibold x:tracking-tight x:mt-8 x:text-2xl;
-
+    /* https://github.com/tailwindlabs/tailwindcss/issues/15597#issuecomment-2582673546 */
+    @apply x:before:bg-gray-100 x:dark:before:bg-neutral-800;
     &:before {
       @apply x:absolute x:size-[33px];
-      @apply x:border-4 x:border-nextra-bg x:bg-gray-100 x:dark:bg-neutral-800;
+      @apply x:border-4 x:border-nextra-bg;
       @apply x:rounded-full x:text-neutral-400 x:text-base x:font-normal x:text-center x:-indent-px;
       @apply x:mt-[3px] x:ms-[-41px];
       content: counter(var(--counter-id));
